--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gitignore": "^0.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0"
   }
 }
